# buildango

./: .cursorrules  .dockerignore  .env.example  .gitignore  CURSOR_PROMPT_PACK.md  Dockerfile  README.md  pyproject.toml
api/: main.py
api/routes/: feasibility.py  runs.py
compiler/explain/: explanation_engine.py
compiler/gepa/: evaluator.py
compiler/ir/: schema.py  validator.py
compiler/rules/: zoning_rules.py
compiler/solver/: constraint_engine.py  feasibility_solver.py
db/: session.py
inference/: vllm_client.py
infra/docker/: api.Dockerfile  worker.Dockerfile
pipelines/ingestion/: zoning_ingest.py
scripts/: freeze_demo.sh  kill_port_8000.ps1  run_api.ps1
storage/: artifact_store.py
tests/: test_compiler.py  test_feasibility_api.py
workers/: feasibility_worker.py
