[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buildango"
version = "0.1.0"
description = "Buildango repo skeleton (compiler + API + workers)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "google-cloud-storage>=2.16.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.8",
]

[tool.ruff]
line-length = 100

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "compiler*", "db*", "inference*", "pipelines*", "storage*", "workers*"]
exclude = ["infra*", "tests*", "scripts*", "frozen_runs*", ".venv*", ".git*"]